--- a/tests/gtests/graph/api/CMakeLists.txt
+++ b/tests/gtests/graph/api/CMakeLists.txt
@@ -31,6 +31,7 @@ set(API_TEST_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/test_cpp_api_op.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_cpp_api_partition.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/test_cpp_api_tensor.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_cpp_api_engine.cpp
     ${TEST_ALLOCATOR}
 )
 
