common: rename DNNL_DEVEL_MODE to DNNL_DEV_MODE

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -66,8 +66,8 @@ if(DNNL_ENABLE_JIT_PROFILING OR DNNL_ENABLE_ITT_TASKS)
     endif()
 endif()
 
-if(DNNL_DEVEL_MODE)
-  add_definitions_with_host_compiler(-DDNNL_DEVEL_MODE)
+if(DNNL_DEV_MODE)
+  add_definitions_with_host_compiler(-DDNNL_DEV_MODE)
   message(STATUS "Developer mode enabled")
 endif()
 
