build: use quotes to avoid removing semicolons

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -260,9 +260,9 @@ if(UNIX AND DNNL_INSTALL_MODE STREQUAL "BUNDLE_V2")
     install(CODE "file(READ \"${CMAKE_INSTALL_PREFIX}/${LIB_CONFIG_INSTALL_DIR}/${LIB_PACKAGE_NAME}-targets.cmake\" TARGETS_CONTENT)")
     install(CODE "string(REPLACE
                          \"get_filename_component(_IMPORT_PREFIX \\\"\\\${CMAKE_CURRENT_LIST_FILE}\\\" PATH)\"
-                         \"get_filename_component(_IMPORT_PREFIX \\\"\\\${CMAKE_CURRENT_LIST_FILE}\\\" REALPATH)\nget_filename_component(_IMPORT_PREFIX \\\"\\\${_IMPORT_PREFIX}\\\" PATH)\"
-                         TARGETS_CONTENT \${TARGETS_CONTENT})")
-    install(CODE "file(WRITE \"${CMAKE_INSTALL_PREFIX}/${LIB_CONFIG_INSTALL_DIR}/dnnl-targets.cmake\" \${TARGETS_CONTENT})")
+                         \"get_filename_component(_IMPORT_PREFIX \\\"\\\${CMAKE_CURRENT_LIST_FILE}\\\" REALPATH)\\nget_filename_component(_IMPORT_PREFIX \\\"\\\${_IMPORT_PREFIX}\\\" PATH)\"
+                         TARGETS_CONTENT \"\${TARGETS_CONTENT}\")")
+    install(CODE "file(WRITE \"${CMAKE_INSTALL_PREFIX}/${LIB_CONFIG_INSTALL_DIR}/${LIB_PACKAGE_NAME}-targets.cmake\" \"\${TARGETS_CONTENT}\")")
 endif()
 
 # Install custom find modules for transitive dependencies
