graph: backend: compiler: build: refactor LLVM codegen and fix broken LLVM build

--- a/src/graph/backend/graph_compiler/CMakeLists.txt
+++ b/src/graph/backend/graph_compiler/CMakeLists.txt
@@ -55,6 +55,7 @@ if (${_index} GREATER -1)
 else()
     set(SC_BUILTIN_ENABLED OFF)
 endif()
+set_property(GLOBAL APPEND PROPERTY GRAPH_COMPILER_BUILTIN_ENABLED ${SC_BUILTIN_ENABLED})
 
 if(NOT SC_LLVM_ENABLED AND NOT SC_BUILTIN_ENABLED AND NOT SC_CFAKE_ENABLED)
     message(FATAL_ERROR "ONEDNN_EXPERIMENTAL_GRAPH_COMPILER_CPU_JIT should include at least one of llvm;c;builtin")
