--- a/src/graph/backend/graph_compiler/core/CMakeLists.txt
+++ b/src/graph/backend/graph_compiler/core/CMakeLists.txt
@@ -200,14 +200,22 @@ endif()
 # Setting compiler flags
 ##########################
 
-if(${CMAKE_VERSION} VERSION_LESS "3.1.0") 
-    if(MSVC)
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++${SC_CPP_VER}")
-    else()
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++${SC_CPP_VER}")
-    endif()
+if(CMAKE_BASE_NAME MATCHES "(icx|icpx)" AND ${SC_CPP_VER} LESS 14)
+    set(NEED_SET_CPP_STD OFF)
 else()
-    set_property(TARGET ${SC_LIB_NAME} PROPERTY CXX_STANDARD ${SC_CPP_VER})
+    set(NEED_SET_CPP_STD ON)
+endif()
+
+if(NEED_SET_CPP_STD)
+    if(${CMAKE_VERSION} VERSION_LESS "3.1.0") 
+        if(MSVC)
+            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++${SC_CPP_VER}")
+        else()
+            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++${SC_CPP_VER}")
+        endif()
+    else()
+        set_property(TARGET ${SC_LIB_NAME} PROPERTY CXX_STANDARD ${SC_CPP_VER})
+    endif()
 endif()
 
 if(NOT MSVC OR CMAKE_BASE_NAME MATCHES "(icx|icpx)")
